--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -270,7 +270,52 @@
       "force-gamemode": "Force Game Mode",
       "spawn-protection": "Spawn Protection Radius",
       "sync-chunk-writes": "Sync Chunk Writes",
-      "accepts-transfers": "Accept Transfers"
+      "accepts-transfers": "Accept Transfers",
+      "enable-code-of-conduct":"Enable Code of Conduct",
+      "initial-enabled-packs":"Initial Enabled Packs",
+      "management-server-allowed-origins":"Management Server Allowed Origins",
+      "management-server-enabled":"Enable Remote Management API",
+      "management-server-host" : "Management Server Bind Host",
+      "management-server-port": "Management Server Bind Port",
+      "management-server-secret": "Management Service Access Key",
+      "management-server-tls-enabled": "Enable TLS Encryption",
+      "management-server-tls-keystore": "TLS Keystore File Path",
+      "management-server-tls-keystore-password":"TLS Keystore Password",
+      "use-native-transport": "Use Linux Native Transport Optimization",
+      "log-ips": "Log Player IP Addresses",
+      "max-chained-neighbor-updates": "Maximum Chained Neighbor Updates",
+      "max-world-size": "Maximum World Border Radius",
+      "op-permission-level": "OP Permission Level",
+      "player-idle-timeout": "Player Idle Timeout (minutes), 0 to disable",
+      "prevent-proxy-connections": "Prevent Proxy Connections",
+      "rate-limit": "Maximum Requests Per Minute Per Player, 0 to disable",
+      "rcon": {
+        "port": "RCON Port",
+        "password": "RCON Password"
+      },
+      "query": {
+        "port": "Query Protocol Port"
+      },
+      "require-resource-pack": "Require Resource Pack",
+      "pause-when-empty-seconds": "Pause When Empty (seconds)",
+      "region-file-compression": "Region File Compression Method",
+      "status-heartbeat-interval": "Status Heartbeat Interval (seconds)",
+      "text-filtering-version": "Text Filtering Version",
+      "text-filtering-config": "Text Filtering Configuration File",
+      "resource-pack-sha1": "Resource Pack SHA-1 Hash",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack": "Resource Pack URL",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "hide-online-players": "Hide Online Players Count",
+      "generator-settings": "World Generator Settings",
+      "function-permission-level": "Function Permission Level",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
+      "enforce-secure-profile": "Enforce Secure Profiles", 
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "bug-report-link": "Bug Report Link",
+      "broadcast-rcon-to-ops": "Broadcast RCON Commands to Ops",
+      "broadcast-console-to-ops": "Broadcast Console Commands to Ops"
     }
   },
   "players": {
