--- a/src/locales/zh-JB.json
+++ b/src/locales/zh-JB.json
@@ -292,23 +292,115 @@
   "config": {
     "title": "配置编辑",
     "save": "保存",
-    "reload": "重新加载",
-    "search_config": "搜配置项...",
-    "no_results": "没找到配置项",
-    "boolean_true": "开",
-    "boolean_false": "关",
-    "integer": "数字",
-    "string": "文本",
-    "comment": "注释",
-    "edit_value": "改值",
-    "reset_to_default": "重置为默认",
-    "copy_value": "复制值",
-    "confirm_delete": "确定删除此配置项？",
-    "add_config": "添加配置项",
-    "key": "键",
-    "value": "值",
-    "enter_key": "输入键",
-    "enter_value": "输入值"
+    "reload": "重载",
+    "search": "搜索配置项...",
+    "select_server": "选择要编辑配置的服务器",
+    "no_server": "请选择一个服务器来编辑配置",
+    "loading": "加载配置中...",
+    "no_config": "没有找到配置文件，请先启动一次服务器以生成 server.properties",
+    "saved": "配置已保存",
+    "categories": {
+      "all": "全部",
+      "network": "网络",
+      "player": "玩家",
+      "game": "游戏",
+      "world": "世界",
+      "performance": "性能",
+      "display": "显示",
+      "other": "其他"
+    },
+    "default": "默认值",
+    "gamemode": {
+      "survival": "生存",
+      "creative": "创造",
+      "adventure": "冒险",
+      "spectator": "旁观"
+    },
+    "difficulty": {
+      "peaceful": "和平",
+      "easy": "简单",
+      "normal": "普通",
+      "hard": "困难"
+    },
+    "properties": {
+      "server-port": "服务器端口",
+      "server-ip": "服务器绑定IP，留空表示所有",
+      "max-players": "最大玩家数",
+      "online-mode": "正版验证",
+      "white-list": "启用白名单",
+      "enforce-whitelist": "强制白名单",
+      "gamemode": "默认游戏模式",
+      "difficulty": "游戏难度",
+      "hardcore": "极限模式",
+      "pvp": "允许PVP",
+      "allow-flight": "允许飞行",
+      "allow-nether": "允许下界",
+      "spawn-monsters": "生成怪物",
+      "spawn-animals": "生成动物",
+      "spawn-npcs": "生成NPC",
+      "generate-structures": "生成结构",
+      "level-name": "世界名称",
+      "level-seed": "世界种子",
+      "level-type": "世界类型",
+      "view-distance": "视距",
+      "simulation-distance": "模拟距离",
+      "max-tick-time": "最大tick时间(ms)，-1为禁用",
+      "network-compression-threshold": "网络压缩阈值",
+      "motd": "服务器描述(MOTD)",
+      "enable-command-block": "启用命令方块",
+      "enable-query": "启用Query协议",
+      "enable-rcon": "启用RCON远程控制",
+      "enable-status": "启用服务器列表状态",
+      "force-gamemode": "强制游戏模式",
+      "spawn-protection": "出生点保护半径",
+      "sync-chunk-writes": "同步区块写入",
+      "resource-pack": "资源包URL",
+      "resource-pack-id": "资源包ID",
+      "resource-pack-prompt": "资源包提示",
+      "resource-pack-sha1": "资源包SHA1哈希",
+      "text-filtering-config": "文本过滤配置",
+      "text-filtering-version": "文本过滤版本",
+      "broadcast-rcon-to-ops": "向OP广播RCON消息",
+      "bug-report-link": "Bug报告链接",
+      "enable-jmx-monitoring": "启用JMX监控",
+      "enforce-secure-profile": "强制安全配置文件",
+      "entity-broadcast-range-percentage": "实体广播范围百分比",
+      "function-permission-level": "函数权限级别",
+      "generator-settings": "生成器设置",
+      "hide-online-players": "隐藏在线玩家",
+      "initial-disabled-packs": "初始禁用的数据包",
+      "accepts-transfers": "接受传输",
+      "broadcast-console-to-ops": "向OP广播控制台消息",
+      "enable-code-of-conduct":"启用行为准则",
+      "initial-enabled-packs":"初始启用的数据包",
+      "management-server-allowed-origins":"管理服务器允许的资源包来源",
+      "management-server-enabled":"启用远程管理接口",
+      "management-server-host" : "服务端管理协议绑定的主机名或IP地址",
+      "management-server-port": "服务端管理协议绑定的端口",
+      "management-server-secret": "管理服务访问密钥",
+      "management-server-tls-enabled": "是否启用管理服务端的 TLS（传输层安全性协议）加密",
+      "management-server-tls-keystore": "保存服务端用于TLS加密的私钥和证书的密钥库（KeyStore）文件路径",
+      "management-server-tls-keystore-password":"用于访问TLS密钥库（KeyStore）文件的密码",
+      "use-native-transport": "是否启用针对Linux平台的数据包收发优化",
+      "log-ips": "是否在服务器日志中记录玩家的 IP 地址",
+      "max-chained-neighbor-updates": "最大连续连锁更新的次数",
+      "max-world-size": "设置世界边界的最大允许半径值",
+      "op-permission-level": "OP权限级别",
+      "player-idle-timeout": "玩家闲置超时时间（分钟），0为禁用",
+      "prevent-proxy-connections": "是否阻止代理连接",
+      "rate-limit": "每个玩家每分钟允许的请求数量，0为禁用",
+      "rcon": {
+        "port": "RCON端口",
+        "password": "RCON密码"
+      },
+      "query": {
+        "port": "Query协议端口"
+      },
+      "require-resource-pack": "是否强制玩家使用资源包",
+      "pause-when-empty-seconds": "当服务器空闲时自动暂停的秒数，0为禁用",
+      "region-file-compression": "区域文件压缩方式",
+      "status-heartbeat-interval": "服务器状态心跳间隔（秒）"
+    }
   },
   "players": {
     "title": "玩家管理",
