--- a/src/locales/zh-WU.json
+++ b/src/locales/zh-WU.json
@@ -285,7 +285,36 @@
       "generator-settings": "生成器設定",
       "hide-online-players": "隱藏線上玩家",
       "initial-disabled-packs": "一開始關掉的資料包",
-      "accepts-transfers": "接受傳輸"
+      "accepts-transfers": "接受傳輸",
+      "enable-code-of-conduct":"啟用行為準則",
+      "initial-enabled-packs":"初始啟用個數據包",
+      "management-server-allowed-origins":"管理服務器允許個資源包來源",
+      "management-server-enabled":"啟用遠程管理接口",
+      "management-server-host" : "管理協議綁定個主機",
+      "management-server-port": "管理協議綁定個端口",
+      "management-server-secret": "管理服務訪問密鑰",
+      "management-server-tls-enabled": "啟用TLS加密",
+      "management-server-tls-keystore": "TLS密鑰庫文件路徑",
+      "management-server-tls-keystore-password":"TLS密鑰庫密碼",
+      "use-native-transport": "啟用Linux原生傳輸優化",
+      "log-ips": "記錄玩家IP地址",
+      "max-chained-neighbor-updates": "最大連鎖鄰居更新次數",
+      "max-world-size": "世界邊界最大半徑",
+      "op-permission-level": "管理員權限等級",
+      "player-idle-timeout": "玩家閒置超時（分鐘），0為禁用",
+      "prevent-proxy-connections": "阻止代理連接",
+      "rate-limit": "每分鐘請求限制，0為禁用",
+      "rcon": {
+        "port": "RCON端口",
+        "password": "RCON密碼"
+      },
+      "query": {
+        "port": "Query協議端口"
+      },
+      "require-resource-pack": "要求資源包",
+      "pause-when-empty-seconds": "空閒自動暫停秒數",
+      "region-file-compression": "區域文件壓縮方式",
+      "status-heartbeat-interval": "狀態心跳間隔（秒）"
     }
   },
   "players": {
