--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -285,7 +285,36 @@
       "generator-settings": "Generator-Einstellungen",
       "hide-online-players": "Online-Spieler verbergen",
       "initial-disabled-packs": "Initial deaktivierte Datenpakete",
-      "accepts-transfers": "Übertragungen akzeptieren"
+      "accepts-transfers": "Übertragungen akzeptieren",
+      "enable-code-of-conduct":"Verhaltenskodex aktivieren",
+      "initial-enabled-packs":"Initial aktivierte Datenpakete",
+      "management-server-allowed-origins":"Erlaubte Ressourcenpaket-Quellen",
+      "management-server-enabled":"Remote-Management-API aktivieren",
+      "management-server-host" : "Management-Server-Bindungshost",
+      "management-server-port": "Management-Server-Bindungsport",
+      "management-server-secret": "Management-Dienst-Zugangsschlüssel",
+      "management-server-tls-enabled": "TLS-Verschlüsselung aktivieren",
+      "management-server-tls-keystore": "TLS-Schlüsselspeicherpfad",
+      "management-server-tls-keystore-password":"TLS-Schlüsselspeicher-Passwort",
+      "use-native-transport": "Linux-native Optimierung aktivieren",
+      "log-ips": "Spieler-IPs in Logs protokollieren",
+      "max-chained-neighbor-updates": "Max. verkettete Nachbarupdates",
+      "max-world-size": "Maximaler Weltgrenzradius",
+      "op-permission-level": "OP-Berechtigungsstufe",
+      "player-idle-timeout": "Inaktivitätszeit (Min.), 0 zum Deaktivieren",
+      "prevent-proxy-connections": "Proxy-Verbindungen verhindern",
+      "rate-limit": "Max. Anfragen pro Minute pro Spieler, 0 zum Deaktivieren",
+      "rcon": {
+        "port": "RCON-Port",
+        "password": "RCON-Passwort"
+      },
+      "query": {
+        "port": "Query-Protokoll-Port"
+      },
+      "require-resource-pack": "Ressourcenpaket erzwingen",
+      "pause-when-empty-seconds": "Pause bei Leerstand (Sekunden)",
+      "region-file-compression": "Regionsdatei-Komprimierungsmethode",
+      "status-heartbeat-interval": "Status-Heartbeat-Intervall (Sek.)"
     }
   },
   "players": {
