--- a/src/locales/en-AU.json
+++ b/src/locales/en-AU.json
@@ -285,7 +285,36 @@
       "generator-settings": "Generator Settings",
       "hide-online-players": "Hide Online Players",
       "initial-disabled-packs": "Initial Disabled Packs",
-      "accepts-transfers": "Accepts Transfers"
+      "accepts-transfers": "Accepts Transfers",
+      "enable-code-of-conduct":"Make 'em follow the rules",
+      "initial-enabled-packs":"Packs ya can use from the start",
+      "management-server-allowed-origins":"Where the resource packs can come from",
+      "management-server-enabled":"Let 'em manage from afar",
+      "management-server-host" : "Where the boss listens from",
+      "management-server-port": "Which door the boss knocks on",
+      "management-server-secret": "The secret handshake",
+      "management-server-tls-enabled": "Wrap it in a secret code",
+      "management-server-tls-keystore": "Where the code book is kept",
+      "management-server-tls-keystore-password":"Password to the code book",
+      "use-native-transport": "Use the quick Linux way",
+      "log-ips": "Keep a log of who's where",
+      "max-chained-neighbor-updates": "How many chain reactions",
+      "max-world-size": "How big the world can be",
+      "op-permission-level": "How much power the mods have",
+      "player-idle-timeout": "How long a lazy player can stand around (minutes)",
+      "prevent-proxy-connections": "No sneaky connections",
+      "rate-limit": "How many requests per minute, 0 means no worries",
+      "rcon": {
+        "port": "RCON door number",
+        "password": "RCON secret word"
+      },
+      "query": {
+        "port": "Query door number"
+      },
+      "require-resource-pack": "Make 'em use the same pack",
+      "pause-when-empty-seconds": "Have a rest when no one's around (seconds)",
+      "region-file-compression": "How we squash the region files",
+      "status-heartbeat-interval": "How often the server says 'I'm alive' (seconds)"
     }
   },
   "players": {
