--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -270,7 +270,36 @@
       "force-gamemode": "Forzar modo",
       "spawn-protection": "Protección de spawn",
       "sync-chunk-writes": "Sincronización de chunks",
-      "accepts-transfers": "Aceptar transferencias"
+      "accepts-transfers": "Aceptar transferencias",
+      "enable-code-of-conduct":"Habilitar código de conducta",
+      "initial-enabled-packs":"Paquetes inicialmente habilitados",
+      "management-server-allowed-origins":"Orígenes de paquetes de recursos permitidos",
+      "management-server-enabled":"Habilitar API de gestión remota",
+      "management-server-host" : "Host de enlace del servidor de gestión",
+      "management-server-port": "Puerto de enlace del servidor de gestión",
+      "management-server-secret": "Clave de acceso al servicio de gestión",
+      "management-server-tls-enabled": "Habilitar cifrado TLS",
+      "management-server-tls-keystore": "Ruta del almacén de claves TLS",
+      "management-server-tls-keystore-password":"Contraseña del almacén de claves TLS",
+      "use-native-transport": "Habilitar optimización nativa de Linux",
+      "log-ips": "Registrar IPs de jugadores en logs",
+      "max-chained-neighbor-updates": "Máx. actualizaciones encadenadas",
+      "max-world-size": "Radio máximo del borde del mundo",
+      "op-permission-level": "Nivel de permiso de OP",
+      "player-idle-timeout": "Tiempo de inactividad (min), 0 para desactivar",
+      "prevent-proxy-connections": "Prevenir conexiones proxy",
+      "rate-limit": "Máx. solicitudes por minuto por jugador, 0 para desactivar",
+      "rcon": {
+        "port": "Puerto RCON",
+        "password": "Contraseña RCON"
+      },
+      "query": {
+        "port": "Puerto del protocolo Query"
+      },
+      "require-resource-pack": "Requerir paquete de recursos",
+      "pause-when-empty-seconds": "Pausa cuando vacío (segundos)",
+      "region-file-compression": "Método de compresión de archivos de región",
+      "status-heartbeat-interval": "Intervalo de latido de estado (segundos)"
     }
   },
   "players": {
