--- a/src/locales/ja-HK.json
+++ b/src/locales/ja-HK.json
@@ -285,7 +285,36 @@
       "generator-settings": "ワールド生成設定だべ",
       "hide-online-players": "オンラインプレイヤーを隠すべ",
       "initial-disabled-packs": "最初に無効なデータパックだべ",
-      "accepts-transfers": "転送を受け入れるべ"
+      "accepts-transfers": "転送を受け入れるべ",
+      "enable-code-of-conduct":"行動規範を有効にするべ",
+      "initial-enabled-packs":"最初に有効なデータパックだべ",
+      "management-server-allowed-origins":"管理サーバーが許可するリソースパックの出どころだべ",
+      "management-server-enabled":"リモート管理APIを有効にするべ",
+      "management-server-host" : "管理サーバーがバインドするホストだべ",
+      "management-server-port": "管理サーバーがバインドするポートだべ",
+      "management-server-secret": "管理サービスのアクセスキーだべ",
+      "management-server-tls-enabled": "TLS暗号化を有効にするべ",
+      "management-server-tls-keystore": "TLSキーストアのファイルパスだべ",
+      "management-server-tls-keystore-password":"TLSキーストアのパスワードだべ",
+      "use-native-transport": "Linuxネイティブ転送を使うべ",
+      "log-ips": "プレイヤーのIPアドレスをログに残すべ",
+      "max-chained-neighbor-updates": "最大連鎖隣接更新数だべ",
+      "max-world-size": "ワールド境界の最大半径だべ",
+      "op-permission-level": "OP権限レベルだべ",
+      "player-idle-timeout": "放置タイムアウト（分）、0で無効だべ",
+      "prevent-proxy-connections": "プロキシ接続を禁止するべ",
+      "rate-limit": "1分あたりの最大リクエスト数、0で無効だべ",
+      "rcon": {
+        "port": "RCONポートだべ",
+        "password": "RCONパスワードだべ"
+      },
+      "query": {
+        "port": "Queryプロトコルのポートだべ"
+      },
+      "require-resource-pack": "リソースパックを要求するべ",
+      "pause-when-empty-seconds": "無人時の自動停止秒数だべ",
+      "region-file-compression": "リージョンファイルの圧縮方式だべ",
+      "status-heartbeat-interval": "ステータスハートビート間隔（秒）だべ"
     }
   },
   "players": {
