--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -285,7 +285,36 @@
       "generator-settings": "Настройки генератора",
       "hide-online-players": "Скрыть онлайн игроков",
       "initial-disabled-packs": "Изначально отключённые датапаки",
-      "accepts-transfers": "Принимать передачи"
+      "accepts-transfers": "Принимать передачи",
+      "enable-code-of-conduct":"Включить кодекс поведения",
+      "initial-enabled-packs":"Изначально включённые датапаки",
+      "management-server-allowed-origins":"Разрешённые источники ресурс-паков",
+      "management-server-enabled":"Включить API удалённого управления",
+      "management-server-host" : "Хост привязки сервера управления",
+      "management-server-port": "Порт привязки сервера управления",
+      "management-server-secret": "Ключ доступа к службе управления",
+      "management-server-tls-enabled": "Включить TLS шифрование",
+      "management-server-tls-keystore": "Путь к хранилищу ключей TLS",
+      "management-server-tls-keystore-password":"Пароль хранилища ключей TLS",
+      "use-native-transport": "Использовать нативную оптимизацию Linux",
+      "log-ips": "Логировать IP-адреса игроков",
+      "max-chained-neighbor-updates": "Макс. цепных обновлений соседей",
+      "max-world-size": "Макс. радиус границы мира",
+      "op-permission-level": "Уровень прав оператора",
+      "player-idle-timeout": "Тайм-аут бездействия (мин), 0 отключено",
+      "prevent-proxy-connections": "Предотвращать прокси-соединения",
+      "rate-limit": "Лимит запросов в минуту, 0 отключено",
+      "rcon": {
+        "port": "Порт RCON",
+        "password": "Пароль RCON"
+      },
+      "query": {
+        "port": "Порт протокола Query"
+      },
+      "require-resource-pack": "Требовать ресурс-пак",
+      "pause-when-empty-seconds": "Пауза при пустоте (секунды)",
+      "region-file-compression": "Метод сжатия файлов регионов",
+      "status-heartbeat-interval": "Интервал пульса статуса (сек)"
     }
   },
   "players": {
