--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -285,7 +285,36 @@
       "generator-settings": "Cài đặt trình tạo",
       "hide-online-players": "Ẩn người chơi trực tuyến",
       "initial-disabled-packs": "Gói dữ liệu tắt ban đầu",
-      "accepts-transfers": "Chấp nhận chuyển"
+      "accepts-transfers": "Chấp nhận chuyển",
+      "enable-code-of-conduct":"Bật quy tắc ứng xử",
+      "initial-enabled-packs":"Gói dữ liệu bật ban đầu",
+      "management-server-allowed-origins":"Nguồn gói tài nguyên được phép",
+      "management-server-enabled":"Bật API quản lý từ xa",
+      "management-server-host" : "Host liên kết máy chủ quản lý",
+      "management-server-port": "Cổng liên kết máy chủ quản lý",
+      "management-server-secret": "Khóa truy cập dịch vụ quản lý",
+      "management-server-tls-enabled": "Bật mã hóa TLS",
+      "management-server-tls-keystore": "Đường dẫn kho khóa TLS",
+      "management-server-tls-keystore-password":"Mật khẩu kho khóa TLS",
+      "use-native-transport": "Bật tối ưu Linux bản địa",
+      "log-ips": "Ghi IP người chơi vào nhật ký",
+      "max-chained-neighbor-updates": "Số cập nhật lân cận liên tiếp tối đa",
+      "max-world-size": "Bán kính biên giới thế giới tối đa",
+      "op-permission-level": "Cấp quyền OP",
+      "player-idle-timeout": "Thời gian chờ không hoạt động (phút), 0 để tắt",
+      "prevent-proxy-connections": "Ngăn kết nối proxy",
+      "rate-limit": "Giới hạn yêu cầu mỗi phút mỗi người, 0 để tắt",
+      "rcon": {
+        "port": "Cổng RCON",
+        "password": "Mật khẩu RCON"
+      },
+      "query": {
+        "port": "Cổng giao thức Query"
+      },
+      "require-resource-pack": "Yêu cầu gói tài nguyên",
+      "pause-when-empty-seconds": "Tạm dừng khi không người (giây)",
+      "region-file-compression": "Phương pháp nén tệp vùng",
+      "status-heartbeat-interval": "Khoảng cách nhịp tim trạng thái (giây)"
     }
   },
   "players": {
