--- a/src/locales/en-AU.json
+++ b/src/locales/en-AU.json
@@ -269,7 +269,52 @@
       "enable-status": "Show in Server List",
       "force-gamemode": "Force Game Mode",
       "spawn-protection": "Spawn Protection",
-      "sync-chunk-writes": "Sync Chunk Writes"
+      "sync-chunk-writes": "Sync Chunk Writes",
+      "resource-pack": "Resource Pack URL",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-sha1": "Resource Pack SHA1 Hash",
+      "text-filtering-config": "Text Filtering Config",
+      "text-filtering-version": "Text Filtering Version",
+      "broadcast-rcon-to-ops": "Broadcast RCON to Ops",
+      "bug-report-link": "Bug Report Link",
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "enforce-secure-profile": "Enforce Secure Profile",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
+      "function-permission-level": "Function Permission Level",
+      "generator-settings": "Generator Settings",
+      "hide-online-players": "Hide Online Players",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "accepts-transfers": "Accepts Transfers",
+      "enable-code-of-conduct":"Make 'em follow the rules",
+      "initial-enabled-packs":"Packs ya can use from the start",
+      "management-server-allowed-origins":"Where the resource packs can come from",
+      "management-server-enabled":"Let 'em manage from afar",
+      "management-server-host" : "Where the boss listens from",
+      "management-server-port": "Which door the boss knocks on",
+      "management-server-secret": "The secret handshake",
+      "management-server-tls-enabled": "Wrap it in a secret code",
+      "management-server-tls-keystore": "Where the code book is kept",
+      "management-server-tls-keystore-password":"Password to the code book",
+      "use-native-transport": "Use the quick Linux way",
+      "log-ips": "Keep a log of who's where",
+      "max-chained-neighbor-updates": "How many chain reactions",
+      "max-world-size": "How big the world can be",
+      "op-permission-level": "How much power the mods have",
+      "player-idle-timeout": "How long a lazy player can stand around (minutes)",
+      "prevent-proxy-connections": "No sneaky connections",
+      "rate-limit": "How many requests per minute, 0 means no worries",
+      "rcon": {
+        "port": "RCON door number",
+        "password": "RCON secret word"
+      },
+      "query": {
+        "port": "Query door number"
+      },
+      "require-resource-pack": "Make 'em use the same pack",
+      "pause-when-empty-seconds": "Have a rest when no one's around (seconds)",
+      "region-file-compression": "How we squash the region files",
+      "status-heartbeat-interval": "How often the server says 'I'm alive' (seconds)"
     }
   },
   "players": {
