--- a/src/locales/en-UD.json
+++ b/src/locales/en-UD.json
@@ -269,7 +269,52 @@
       "enable-status": "sʇɐʇnS ʇsıꞀ ɹǝʌɹǝS ǝꞁqɐuƎ",
       "force-gamemode": "ǝpoW ǝɯɐ⅁ ǝɔɹoℲ",
       "spawn-protection": "snıpɐǝᴚ uoıʇɔǝʇoɹԀ uʍɐdS",
-      "sync-chunk-writes": "sǝʇıɹʍ ʞunɥƆ ɔuʎS"
+      "sync-chunk-writes": "sǝʇıɹʍ ʞunɥƆ ɔuʎS",
+      "resource-pack": "Ꞁᴚ∩ ʞɔɐԀ ǝɔɹnosǝᴚ",
+      "resource-pack-id": "ᗡI ʞɔɐԀ ǝɔɹnosǝᴚ",
+      "resource-pack-prompt": "ʇdɯoɹԀ ʞɔɐԀ ǝɔɹnosǝᴚ",
+      "resource-pack-sha1": "ɥsɐH ıꞀⱯHƧ ʞɔɐԀ ǝɔɹnosǝᴚ",
+      "text-filtering-config": "ƃıɟuoƆ ƃuıɹǝʇꞁıℲ ʇxǝꞀ",
+      "text-filtering-version": "uoısɹǝΛ ƃuıɹǝʇꞁıℲ ʇxǝꞀ",
+      "broadcast-rcon-to-ops": "sdo ɹnoʎ ʇɐ ɯǝɥʇ ʇɹǝqɐ pןnoɥs",
+      "bug-report-link": "ʞuıꞀ ʇɹodǝᴚ ɓnᗺ",
+      "enable-jmx-monitoring": "ƃuıɹoʇıuoW XWſ ǝꞁqɐuƎ",
+      "enforce-secure-profile": "ǝןıɟoɹd ǝɹnɔǝs ǝɔɹoɟuƎ",
+      "entity-broadcast-range-percentage": "ǝƃɐʇuǝɔɹǝԀ ǝƃuɐᴚ ʇsɐɔpɐoɹᗺ ʎʇıʇuƎ",
+      "function-permission-level": "ꞁǝʌǝꞀ uoıssıɯɹǝԀ uoıʇɔunℲ",
+      "generator-settings": "sƃuıʇʇǝS ɹoʇɐɹǝuǝ⅁",
+      "hide-online-players": "sɹǝʎɐꞁԀ ǝuıꞁuo ǝpıH",
+      "initial-disabled-packs": "sʞɔɐԀ pǝꞁqɐsıᗡ ꞁɐıʇıuI",
+      "accepts-transfers": "sɹǝɟsuɐɹꞀ sʇdǝɔɔⱯ",
+      "enable-code-of-conduct":"ǝnqɐd ɹoʇɔnpuoɔ ǝlqɐuƎ",
+      "initial-enabled-packs":"sʞɔɐd pǝlqɐuƎ lɐıʇıuI",
+      "management-server-allowed-origins":"suıbıɹo ʞɔɐd ǝɔɹnosǝɹ pǝʍoꞁꞁⱯ",
+      "management-server-enabled":"lɐɹǝɯoʇ ʇuǝɯǝƃɐuɐɯ ǝlqɐuƎ",
+      "management-server-host" : "ʇsoɥ buıpuıq ɹǝʌɹǝs ʇuǝɯǝƃɐuɐW",
+      "management-server-port": "ʇɹod buıpuıq ɹǝʌɹǝs ʇuǝɯǝƃɐuɐW",
+      "management-server-secret": "ʇɹǝpɐǝq sǝɔɔɐ ǝɔıʌɹǝS",
+      "management-server-tls-enabled": "ƃuıdɹɐɥɔuǝ SLꞀ ǝlqɐuƎ",
+      "management-server-tls-keystore": "ǝɹoʇsʎǝʞ SLꞀ ɟo ɥʇɐԀ",
+      "management-server-tls-keystore-password":"pɹoʍssɐԀ ǝɹoʇsʎǝʞ SLꞀ",
+      "use-native-transport": "ʇɹodsuɐɹʇ ǝʌıʇɐu xnuıꞀ ǝs∩",
+      "log-ips": "sdI ɹǝʎɐꞁd ƃoꞀ",
+      "max-chained-neighbor-updates": "sǝʇɐpd∩ ɹoqɥbıǝN pǝuıɐɥƆ xɐW",
+      "max-world-size": "snıpɐᴚ ɹǝpɹoq pꞁɹoM xɐW",
+      "op-permission-level": "ꞁǝʌǝꞀ uoıssıɯɹǝԀ ԀO",
+      "player-idle-timeout": "(ʇno ǝlqɐsıp oʇ 0) 'sʇunoıɯ ʇnoǝɯıꞀ ǝꞁpI ɹǝʎɐꞀԀ",
+      "prevent-proxy-connections": "suoıʇɔǝuuoϽ ʎxoɹԀ ʇuǝʌǝɹԀ",
+      "rate-limit": "ʇno ǝlqɐsıp oʇ 0 'ɹǝʎɐꞁd ɹǝd ǝʇnuıɯ ɹǝd sʇsǝnbǝᴚ xɐW",
+      "rcon": {
+        "port": "ʇɹoԀ NOϽᴚ",
+        "password": "pɹoʍssɐԀ NOϽᴚ"
+      },
+      "query": {
+        "port": "ʇɹoԀ loɔoʇoɹԀ ʎɹǝnϽ"
+      },
+      "require-resource-pack": "ʞɔɐԀ ǝɔɹnosǝᴚ ǝɹınbǝᴚ",
+      "pause-when-empty-seconds": "(spuoɔǝS) ʎʇdɯƎ uǝɥʍ ǝsnɐԀ",
+      "region-file-compression": "pǝɥʇǝɯ uoıssǝɹdɯoƆ ǝꞁıℲ uoıƃǝᴚ",
+      "status-heartbeat-interval": "(spuoɔǝS) ꞁɐʌɹǝʇuI ʇɐǝqʇɹɐǝH sʇɐʇnS"
     }
   },
   "players": {
