--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -271,40 +271,51 @@
       "spawn-protection": "Spawn Protection Radius",
       "sync-chunk-writes": "Sync Chunk Writes",
       "accepts-transfers": "Accept Transfers",
-      "broadcast-console-to-ops": "Broadcast Console to Ops",
-      "broadcast-rcon-to-ops": "Broadcast RCON to Ops",
-      "bug-report-link": "Bug Report Link",
-      "enable-jmx-monitoring": "Enable JMX Monitoring",
-      "enforce-secure-profile": "Enforce Secure Profile",
-      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
-      "function-permission-level": "Function Permission Level",
-      "generator-settings": "Generator Settings",
-      "hide-online-players": "Hide Online Players",
-      "initial-disabled-packs": "Initial Disabled Packs",
-      "initial-enabled-packs": "Initial Enabled Packs",
-      "log-ips": "Log IPs",
-      "max-chained-neighbor-updates": "Max Chained Neighbor Updates",
-      "max-world-size": "Max World Size",
-      "online-mode": "Online Mode",
+      "enable-code-of-conduct":"Enable Code of Conduct",
+      "initial-enabled-packs":"Initial Enabled Packs",
+      "management-server-allowed-origins":"Management Server Allowed Origins",
+      "management-server-enabled":"Enable Remote Management API",
+      "management-server-host" : "Management Server Bind Host",
+      "management-server-port": "Management Server Bind Port",
+      "management-server-secret": "Management Service Access Key",
+      "management-server-tls-enabled": "Enable TLS Encryption",
+      "management-server-tls-keystore": "TLS Keystore File Path",
+      "management-server-tls-keystore-password":"TLS Keystore Password",
+      "use-native-transport": "Use Linux Native Transport Optimization",
+      "log-ips": "Log Player IP Addresses",
+      "max-chained-neighbor-updates": "Maximum Chained Neighbor Updates",
+      "max-world-size": "Maximum World Border Radius",
       "op-permission-level": "OP Permission Level",
-      "pause-when-empty-seconds": "Pause When Empty Seconds",
-      "player-idle-timeout": "Player Idle Timeout",
+      "player-idle-timeout": "Player Idle Timeout (minutes), 0 to disable",
       "prevent-proxy-connections": "Prevent Proxy Connections",
-      "query.port": "Query Port",
-      "rate-limit": "Rate Limit",
-      "rcon.password": "RCON Password",
-      "rcon.port": "RCON Port",
-      "region-file-compression": "Region File Compression",
+      "rate-limit": "Maximum Requests Per Minute Per Player, 0 to disable",
+      "rcon": {
+        "port": "RCON Port",
+        "password": "RCON Password"
+      },
+      "query": {
+        "port": "Query Protocol Port"
+      },
       "require-resource-pack": "Require Resource Pack",
-      "resource-pack": "Resource Pack URL",
-      "resource-pack-id": "Resource Pack ID",
-      "resource-pack-prompt": "Resource Pack Prompt",
-      "resource-pack-sha1": "Resource Pack SHA1",
-      "text-filtering-config": "Text Filtering Config",
+      "pause-when-empty-seconds": "Pause When Empty (seconds)",
+      "region-file-compression": "Region File Compression Method",
+      "status-heartbeat-interval": "Status Heartbeat Interval (seconds)",
       "text-filtering-version": "Text Filtering Version",
-      "server-ip": "Server IP",
-      "use-native-transport": "Use Native Transport",
-      "white-list": "White List"
+      "text-filtering-config": "Text Filtering Configuration File",
+      "resource-pack-sha1": "Resource Pack SHA-1 Hash",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack": "Resource Pack URL",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "hide-online-players": "Hide Online Players Count",
+      "generator-settings": "World Generator Settings",
+      "function-permission-level": "Function Permission Level",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
+      "enforce-secure-profile": "Enforce Secure Profiles", 
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "bug-report-link": "Bug Report Link",
+      "broadcast-rcon-to-ops": "Broadcast RCON Commands to Ops",
+      "broadcast-console-to-ops": "Broadcast Console Commands to Ops"
     }
   },
   "players": {
