--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -271,38 +271,51 @@
       "spawn-protection": "スポーン保護半径",
       "sync-chunk-writes": "チャンク書き込み同期",
       "accepts-transfers": "転送を受け入れる",
-      "broadcast-console-to-ops": "コンソールをOPにブロードキャスト",
-      "broadcast-rcon-to-ops": "RCONをOPにブロードキャスト",
-      "bug-report-link": "バグレポートリンク",
-      "enable-jmx-monitoring": "JMXモニタリングを有効にする",
-      "enforce-secure-profile": "セキュアプロファイルを強制",
-      "entity-broadcast-range-percentage": "エンティティブロードキャスト範囲割合",
-      "function-permission-level": "関数権限レベル",
-      "generator-settings": "ジェネレーター設定",
-      "hide-online-players": "オンラインプレイヤーを非表示",
-      "initial-disabled-packs": "初期無効パック",
-      "initial-enabled-packs": "初期有効パック",
-      "log-ips": "IPをログに記録",
-      "max-chained-neighbor-updates": "最大連鎖近隣更新",
-      "max-world-size": "最大ワールドサイズ",
-      "online-mode": "オンラインモード",
+      "enable-code-of-conduct":"行動規範を有効化",
+      "initial-enabled-packs":"初期有効データパック",
+      "management-server-allowed-origins":"管理サーバー許可リソースパックオリジン",
+      "management-server-enabled":"リモート管理APIを有効化",
+      "management-server-host" : "管理サーバーバインドホスト",
+      "management-server-port": "管理サーバーバインドポート",
+      "management-server-secret": "管理サービスアクセスキー",
+      "management-server-tls-enabled": "TLS暗号化を有効化",
+      "management-server-tls-keystore": "TLSキーストアファイルパス",
+      "management-server-tls-keystore-password":"TLSキーストアパスワード",
+      "use-native-transport": "Linuxネイティブ転送を有効化",
+      "log-ips": "プレイヤーIPをログに記録",
+      "max-chained-neighbor-updates": "最大連鎖隣接更新数",
+      "max-world-size": "ワールド境界最大半径",
       "op-permission-level": "OP権限レベル",
-      "pause-when-empty-seconds": "空の時のポーズ秒数",
-      "player-idle-timeout": "プレイヤーアイドルタイムアウト",
-      "prevent-proxy-connections": "プロキシ接続を防止",
-      "query.port": "Queryポート",
-      "rate-limit": "レート制限",
-      "rcon.password": "RCONパスワード",
-      "rcon.port": "RCONポート",
-      "region-file-compression": "リージョンファイル圧縮",
+      "player-idle-timeout": "放置タイムアウト（分）、0で無効",
+      "prevent-proxy-connections": "プロキシ接続を禁止",
+      "rate-limit": "1分あたりの最大リクエスト数、0で無効",
+      "rcon": {
+        "port": "RCONポート",
+        "password": "RCONパスワード"
+      },
+      "query": {
+        "port": "Queryプロトコルポート"
+      },
       "require-resource-pack": "リソースパックを要求",
-      "resource-pack": "リソースパックURL",
+      "pause-when-empty-seconds": "無人時自動停止秒数",
+      "region-file-compression": "リージョンファイル圧縮方式",
+      "status-heartbeat-interval": "ステータスハートビート間隔（秒）",
+      "broadcast-console-to-ops": "OPにコンソールメッセージをブロードキャスト",
+      "broadcast-rcon-to-ops": "OPにRCONメッセージをブロードキャスト",
+      "bug-report-link": "バグを見つけた場合は、以下のリンクから報告してください",
+      "enable-jmx-monitoring": "JMXモニタリングを有効化",
+      "enforce-secure-profile": "安全なプロファイルを強制",
+      "entity-broadcast-range-percentage": "エンティティブロード範囲の割合",
+      "function-permission-level": "関数の実行に必要な権限レベル",
+      "generator-settings": "ワールド生成設定",
+      "hide-online-players": "オンラインプレイヤー数を非表示",
+      "initial-disabled-packs": "初期無効データパック",
+      "resource-pack": "リソースパック",
       "resource-pack-id": "リソースパックID",
       "resource-pack-prompt": "リソースパックプロンプト",
-      "resource-pack-sha1": "リソースパックSHA1",
-      "server-ip": "サーバーIP",
-      "use-native-transport": "ネイティブトランスポートを使用",
-      "white-list": "ホワイトリスト"
+      "resource-pack-sha1": "リソースパックSHA-1",
+      "text-filtering-config": "テキストフィルタリング設定",
+      "text-filtering-version": "テキストフィルタリングバージョン"
     }
   },
   "players": {
