--- a/src/locales/zh-CY.json
+++ b/src/locales/zh-CY.json
@@ -269,7 +269,52 @@
       "enable-status": "列表头显示",
       "force-gamemode": "强制游戏模式",
       "spawn-protection": "出生点保护半径",
-      "sync-chunk-writes": "同步区块写入"
+      "sync-chunk-writes": "同步区块写入",
+      "resource-pack": "资源包URL",
+      "resource-pack-id": "资源包ID",
+      "resource-pack-prompt": "资源包提示",
+      "resource-pack-sha1": "资源包SHA1哈希",
+      "text-filtering-config": "文本过滤配置",
+      "text-filtering-version": "文本过滤版本",
+      "broadcast-rcon-to-ops": "给当官的吼RCON消息",
+      "bug-report-link": "Bug报告链接",
+      "enable-jmx-monitoring": "开JMX监控",
+      "enforce-secure-profile": "强制安全配置文件",
+      "entity-broadcast-range-percentage": "实体广播范围百分比",
+      "function-permission-level": "函数权限等级",
+      "generator-settings": "生成器设置",
+      "hide-online-players": "藏到在线玩家",
+      "initial-disabled-packs": "一开始不准用的数据包",
+      "accepts-transfers": "接收传输",
+      "enable-code-of-conduct":"开行为准则",
+      "initial-enabled-packs":"一开始就准用的数据包",
+      "management-server-allowed-origins":"管理服务器准从哪来的资源包",
+      "management-server-enabled":"开远程管理接口",
+      "management-server-host" : "管理协议绑哪个IP",
+      "management-server-port": "管理协议绑哪个端口",
+      "management-server-secret": "管理服务进门钥匙",
+      "management-server-tls-enabled": "开不开TLS加密",
+      "management-server-tls-keystore": "TLS钥匙串放哪儿的",
+      "management-server-tls-keystore-password":"开钥匙串的密码",
+      "use-native-transport": "开不开Linux平台优化",
+      "log-ips": "记不记玩家IP",
+      "max-chained-neighbor-updates": "最多连到起更新好多回",
+      "max-world-size": "世界边界最大有好大",
+      "op-permission-level": "当官儿的权限等级",
+      "player-idle-timeout": "玩家干坐起好久踢，0就是不踢",
+      "prevent-proxy-connections": "准不准走代理",
+      "rate-limit": "一分钟最多整好多请求，0就是不限",
+      "rcon": {
+        "port": "RCON走哪个端口",
+        "password": "RCON进门密码"
+      },
+      "query": {
+        "port": "Query协议走哪个端口"
+      },
+      "require-resource-pack": "非要玩家用资源包不",
+      "pause-when-empty-seconds": "没得人自动暂停几秒",
+      "region-file-compression": "区域文件咋个压缩",
+      "status-heartbeat-interval": "状态心跳几秒蹦一回"
     }
   },
   "players": {
