--- a/src/locales/zh-ME.json
+++ b/src/locales/zh-ME.json
@@ -269,7 +269,52 @@
       "enable-status": "显示在列表里",
       "force-gamemode": "强制游戏模式",
       "spawn-protection": "出生点保护多大",
-      "sync-chunk-writes": "同步区块写入"
+      "sync-chunk-writes": "同步区块写入喵",
+      "resource-pack": "资源包URL喵",
+      "resource-pack-id": "资源包ID喵",
+      "resource-pack-prompt": "资源包提示喵",
+      "resource-pack-sha1": "资源包SHA1哈希喵",
+      "text-filtering-config": "文本过滤配置喵",
+      "text-filtering-version": "文本过滤版本喵",
+      "broadcast-rcon-to-ops": "给大猫猫广播RCON消息喵",
+      "bug-report-link": "Bug报告链接喵",
+      "enable-jmx-monitoring": "启用JMX监控喵",
+      "enforce-secure-profile": "强制安全配置文件喵",
+      "entity-broadcast-range-percentage": "实体广播范围百分比喵",
+      "function-permission-level": "函数权限级别喵",
+      "generator-settings": "生成器设置喵",
+      "hide-online-players": "藏起在线玩家喵",
+      "initial-disabled-packs": "一开始不给玩的喵包",
+      "accepts-transfers": "接受传输喵",
+      "enable-code-of-conduct":"开行为准则喵",
+      "initial-enabled-packs":"一开始就能玩的喵包",
+      "management-server-allowed-origins":"管理服务器准从哪来的喵包喵",
+      "management-server-enabled":"开远程管理接口喵",
+      "management-server-host" : "管理协议绑哪个IP喵",
+      "management-server-port": "管理协议绑哪个口喵",
+      "management-server-secret": "管理服务进门钥匙喵",
+      "management-server-tls-enabled": "开不开TLS加密喵",
+      "management-server-tls-keystore": "TLS钥匙串放哪了喵",
+      "management-server-tls-keystore-password":"开钥匙串的密码喵",
+      "use-native-transport": "开不开Linux平台优化喵",
+      "log-ips": "记不记玩家IP喵",
+      "max-chained-neighbor-updates": "最多连着更新几回喵",
+      "max-world-size": "世界边界最大能多大喵",
+      "op-permission-level": "大猫猫权限等级喵",
+      "player-idle-timeout": "玩家挂机多久踢喵，0就是不踢喵",
+      "prevent-proxy-connections": "让不让走代理喵",
+      "rate-limit": "一分钟最多整多少请求喵，0就是不限喵",
+      "rcon": {
+        "port": "RCON走哪个口喵",
+        "password": "RCON进门密码喵"
+      },
+      "query": {
+        "port": "Query协议走哪个口喵"
+      },
+      "require-resource-pack": "非要玩家用资源包不喵",
+      "pause-when-empty-seconds": "没人自动暂停几秒喵",
+      "region-file-compression": "区域文件咋压缩喵",
+      "status-heartbeat-interval": "状态心跳几秒蹦一回喵"
     }
   },
   "players": {
