--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -269,7 +269,52 @@
       "enable-status": "Enable Server List Status",
       "force-gamemode": "Force Game Mode",
       "spawn-protection": "Spawn Protection Radius",
-      "sync-chunk-writes": "Sync Chunk Writes"
+      "sync-chunk-writes": "Sync Chunk Writes",
+      "resource-pack": "Resource Pack URL",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-sha1": "Resource Pack SHA1 Hash",
+      "text-filtering-config": "Text Filtering Configuration",
+      "text-filtering-version": "Text Filtering Version",
+      "broadcast-rcon-to-ops": "Broadcast RCON to Ops",
+      "bug-report-link": "Bug Report Link",
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "enforce-secure-profile": "Enforce Secure Profile",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
+      "function-permission-level": "Function Permission Level",
+      "generator-settings": "Generator Settings",
+      "hide-online-players": "Hide Online Players",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "accepts-transfers": "Accepts Transfers",
+      "enable-code-of-conduct":"Enable Code of Conduct",
+      "initial-enabled-packs":"Initial Enabled Packs",
+      "management-server-allowed-origins":"Management Server Allowed Origins",
+      "management-server-enabled":"Enable Remote Management API",
+      "management-server-host" : "Management Server Bind Host",
+      "management-server-port": "Management Server Bind Port",
+      "management-server-secret": "Management Service Access Key",
+      "management-server-tls-enabled": "Enable TLS Encryption",
+      "management-server-tls-keystore": "TLS Keystore File Path",
+      "management-server-tls-keystore-password":"TLS Keystore Password",
+      "use-native-transport": "Use Linux Native Transport Optimisation",
+      "log-ips": "Log Player IP Addresses",
+      "max-chained-neighbor-updates": "Maximum Chained Neighbour Updates",
+      "max-world-size": "Maximum World Border Radius",
+      "op-permission-level": "OP Permission Level",
+      "player-idle-timeout": "Player Idle Timeout (minutes), 0 to disable",
+      "prevent-proxy-connections": "Prevent Proxy Connections",
+      "rate-limit": "Maximum Requests Per Minute Per Player, 0 to disable",
+      "rcon": {
+        "port": "RCON Port",
+        "password": "RCON Password"
+      },
+      "query": {
+        "port": "Query Protocol Port"
+      },
+      "require-resource-pack": "Require Resource Pack",
+      "pause-when-empty-seconds": "Pause When Empty (seconds)",
+      "region-file-compression": "Region File Compression Method",
+      "status-heartbeat-interval": "Status Heartbeat Interval (seconds)"
     }
   },
   "players": {
