feat(java): Refine downloader UI & cancellation, fix 0% glitch

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -443,13 +443,13 @@
     "reset_title": "Confirm Restore Defaults",
     "browse_java": "Browse for java.exe",
     "browse_jar": "Browse for .jar file",
-    "java_download": "Download Java",
-    "java_download_desc": "Download and install Java runtime from Adoptium",
-    "java_download_btn": "Download",
+    "java_download": "Auto Install Java",
+    "java_download_desc": "Download and configure JDK environment from Adoptium",
+    "java_download_btn": "One-click Install",
     "java_version_select": "Select Version",
-    "java_installing": "Installing Java...",
-    "java_install_success": "Java installed successfully: ",
-    "java_install_failed": "Java installation failed: ",
+    "java_installing": "Downloading...",
+    "java_install_success": "Installation Complete: ",
+    "java_install_failed": "Installation Failed: ",
     "server_name_placeholder": "Enter name",
     "color_theme": "Color Theme",
     "color_theme_desc": "Customize the color theme of the software",
