--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -487,13 +487,13 @@
     "reset_title": "确认恢复默认",
     "browse_java": "点击浏览选择 java.exe",
     "browse_jar": "点击浏览选择 .jar 文件",
-    "java_download": "下载 Java",
-    "java_download_desc": "从 Adoptium 下载并安装 Java 运行时",
-    "java_download_btn": "下载",
+    "java_download": "自动安装 Java",
+    "java_download_desc": "从 Adoptium 官方下载并配置 JDK 环境 (推荐)",
+    "java_download_btn": "一键安装",
     "java_version_select": "选择版本",
-    "java_installing": "正在安装 Java...",
-    "java_install_success": "Java 安装成功: ",
-    "java_install_failed": "Java 安装失败: ",
+    "java_installing": "正在下载...",
+    "java_install_success": "安装完成: ",
+    "java_install_failed": "安装失败: ",
     "server_name_placeholder": "输入名称",
     "color_theme": "颜色主题",
     "color_theme_desc": "自定义软件颜色主题",
