git commit -m "feat: 新增背景图片生成功能，同步格式化代码"

--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -13,6 +13,7 @@
     "select_server": "选择服务器",
     "open_folder": "打开文件夹",
     "select": "请选择",
+    "clear": "清除",
     "search": "搜索...",
     "search_options": "搜索选项",
     "no_match": "未找到匹配项",
@@ -116,7 +117,7 @@
     "chinese_cy": "川渝话",
     "chinese_wu": "吴语",
     "chinese_hokkien": "闽南语",
-    "chinese_hn" : "河南话",
+    "chinese_hn": "河南话",
     "chinese_jl": "胶辽官话",
     "vietnamese": "Tiếng Việt",
     "british": "British English",
